--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
                 A room-based psychological strategy game for friends. <br>
                 Test your reasoning, adaptability, and social intelligence.
             </p>
-            <div style="display: flex; gap: 1rem; justify-content: center;">
-                <a href="signup.html" class="btn btn-primary">Start Playing</a>
-                <a href="#about" class="btn btn-secondary">How it Works</a>
+            <div class="cta-group">
+                <a href="signup.html" class="btn btn-primary">Start Assessment</a>
+                <a href="login.html" class="btn btn-secondary">Login</a>
+                <button id="home-guest-btn" class="btn btn-secondary" style="border-style: dashed;">Guest</button>
             </div>
         </main>
 
@@ -53,6 +54,7 @@
     <script type="module">
         import { auth } from './js/firebase.js';
         import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
+        import { loginAsGuest } from './js/auth.js';
 
         onAuthStateChanged(auth, (user) => {
             if (user) {
